header 애니메이션 수정-menu 길에 맞게

--- a/css/sub-luggage.css
+++ b/css/sub-luggage.css
@@ -61,7 +61,10 @@
   border-top: 1px solid var(--line2);
   /* 최초의 필터가 보이지 않도록 작동 */
   display: none;
+
+  margin-top: -1px;
 }
+
 .filter-box {
   display: none;
 }
