--- a/css/common.css
+++ b/css/common.css
@@ -110,50 +110,35 @@ body {
 .gnb li a {
   /* border: 1px solid #000; */
   font-weight: 600;
-  padding: 1.3rem 6rem;
+  padding: 0 6rem;
   display: block;
-  width: 100%;
-  height: 100%;
+  /* width: 100%; */
+  height: 5.2rem;
+  /* height: 100%; */
 }
-.gnb li span {
-  display: block;
-  width: 100%;
+.gnb li a b {
+  display: flex;
+  align-items: center;
   height: 100%;
   /* background: rgba(255, 255, 0, 0.2); */
   position: relative;
 }
 /* Hedaer hover effect */
 /* Header hover 장식 요소 */
-.gnb li span::before {
+.gnb li a b::after {
   content: '';
-  display: block;
   width: 0;
   height: 3px;
   background: var(--black);
   position: absolute;
   bottom: 0;
   left: 50%;
-  transition: 0.4s;
-}
-.gnb li span::after {
-  content: '';
-  display: block;
-  width: 0;
-  height: 3px;
-  background: var(--black);
-  position: absolute;
-  bottom: 0;
-  right: 50%;
+  transform: translateX(-50%);
   transition: 0.4s;
 }
 
-.gnb li:hover span::before {
-  width: 40%;
-  /* left: 50%; */
-}
-.gnb li:hover span::after {
-  width: 40%;
-  /* right: 50%; */
+.gnb li a:hover b::after {
+  width: 100%;
 }
 
 /* gnb 하위 메뉴 */
