--- a/css/common.css
+++ b/css/common.css
@@ -159,14 +159,14 @@ body {
   display: none;
   z-index: 2;
 }
-header.active .gnb-dropdown-wrap {
+/* header.active .gnb-dropdown-wrap {
   background: rgba(250, 250, 250, 1);
-}
+} */
 
 /* Gnb submenu animation */
 header.active::after {
   height: 36rem;
-  background: rgba(250, 250, 250, 1);
+  /* background: rgba(250, 250, 250, 1); */
   /* display: none; */
 }
 
