--- a/css/common.css
+++ b/css/common.css
@@ -169,6 +169,9 @@ header.active::after {
   /* background: rgba(250, 250, 250, 1); */
   /* display: none; */
 }
+header.active1::after {
+  height: 10rem;
+}
 
 /* Gnb 배경 */
 header::after {
@@ -247,7 +250,8 @@ header::after {
   align-items: center;
   gap: 1rem;
 }
-.gnb .gnb-dropdown li .gnb-function a::before {
+.gnb .gnb-dropdown li .gnb-function a::before,
+.gnb .gnb-menu-explore li .gnb-news a::before {
   content: '';
   display: block;
   width: 3rem;
@@ -297,6 +301,107 @@ header::after {
 .gnb .gnb-dropdown li .gnb-brand a:nth-child(3) {
   height: 3.8rem;
   background-image: url(../img/ico-gnb-brand3.svg);
+}
+.gnb .gnb-dropdown li .gnb-link {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  bottom: 12%;
+  /* margin-top: 4rem; */
+  gap: 1rem;
+}
+.gnb .gnb-dropdown li .gnb-link a {
+  display: inline-flex;
+  font-weight: 600;
+  font-size: 1.2rem;
+  color: var(--black);
+  margin-top: 0;
+  text-decoration: underline;
+}
+.gnb-link::after {
+  content: '';
+  display: block;
+  width: 2rem;
+  height: 2rem;
+  background: url(../img/ico-arrow-b.svg) no-repeat 50%;
+}
+/* .gnb dropdown  */
+.gnb .gnb-menu-backpacks li .gnb-function {
+  width: 15rem;
+}
+.gnb .gnb-menu-backpacks li .gnb-function a {
+  flex: 1 1 100%;
+}
+.gnb .gnb-menu-backpacks li .gnb-function a:nth-child(1)::before {
+  background-image: url(../img/ico-gnb-function9.svg);
+}
+.gnb .gnb-menu-backpacks li .gnb-function a:nth-child(2)::before {
+  background-image: url(../img/ico-gnb-function7.svg);
+}
+.gnb .gnb-menu-bags li .gnb-type {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  column-gap: 4rem;
+  width: 15rem;
+}
+.gnb .gnb-menu-bags li .gnb-type a {
+  flex: 1 1 30%;
+}
+.gnb .gnb-menu-accessories li .gnb-type {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  column-gap: auto;
+  width: 40rem;
+}
+.gnb .gnb-menu-accessories li .gnb-type a {
+  flex: 1 1 40%;
+}
+.gnb .gnb-menu-accessories li .gnb-link {
+  bottom: 0;
+}
+.gnb .gnb-menu-brand {
+  justify-content: center;
+  gap: 1.5rem;
+}
+.gnb .gnb-menu-brand li:hover img {
+  transform: scale(1.2);
+}
+.gnb .gnb-menu-brand li a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  border-radius: 1rem;
+}
+.gnb .gnb-menu-brand img {
+  width: 100%;
+  transition: 0.4s;
+}
+.gnb .gnb-menu-explore li a {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  color: #000;
+  font-weight: 500;
+}
+/* .gnb .gnb-dropdown li .gnb-news a {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  color: #000;
+  font-weight: 600;
+} */
+
+.gnb .gnb-dropdown li .gnb-news a::before {
+  width: 2rem;
+  height: 2rem;
+  background: url(../img/ico-news.svg) no-repeat 50% / 98%;
+}
+
+.gnb li:nth-child(6) .gnb-dropdown-wrap {
+  padding: 1.5rem 10rem;
 }
 
 /* Header util */
@@ -583,7 +688,6 @@ li:hover .item-pic figure img:nth-child(2) {
     height: 1.5rem;
 
     background-size: 95% auto;
-    border: 1px solid #000;
   }
   .breadcrumb-detail strong {
     font-size: 1.2rem;
@@ -762,7 +866,7 @@ li:hover .item-pic figure img:nth-child(2) {
   .gnb li a {
     padding: 1.3rem 6rem;
     padding: 1.3rem 3.5rem;
-    padding: 1.3rem 2.8vw;
+    padding: 0 2.8vw;
   }
 }
 /* 타블렛 크기 화면 */
