--- a/css/common.css
+++ b/css/common.css
@@ -522,6 +522,9 @@ header::after {
 
   transition: 0.4s;
 }
+.m-gnb-subwrap {
+  display: none;
+}
 .m-gnb-sub {
   display: grid;
   grid-template-columns: repeat(2, 50%);
@@ -545,6 +548,8 @@ header::after {
   border-bottom: 1px solid var(--line);
   /* border-top: 1px solid var(--line); */
   background: var(--gray0);
+  pointer-events: none;
+  background: red;
 }
 
 .m-gnb-sub > li > strong::after {
@@ -591,6 +596,7 @@ header::after {
 .m-gnb .m-gnb-sub li .m-gnb-brand a:nth-child(3) {
   background-image: url(../img/ico-gnb-brand3.svg);
 }
+
 /* btn-link */
 
 .btn-link {
@@ -1142,6 +1148,11 @@ li:hover .item-pic figure img:nth-child(2) {
     grid-template-columns: repeat(1, 100%);
   }
 
+  /* 모바일 메뉴 */
+  .m-gnb-subcon {
+    display: none;
+  }
+
   .m-gnb-sub > li > strong {
     font-size: 1.5rem;
   }
@@ -1152,8 +1163,11 @@ li:hover .item-pic figure img:nth-child(2) {
     width: 3rem;
     height: 3rem;
     background: url(../img/ico-filter-dropdown.svg) no-repeat 50%;
+    transition: 0.4s;
   }
-
+  .m-gnb-sub > li.active strong::after {
+    transform: rotate(180deg);
+  }
   /* Footer */
   #footer {
     padding: 3rem 1rem 10rem;
