--- a/css/common.css
+++ b/css/common.css
@@ -1,5 +1,6 @@
 @charset 'utf-8';
 @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 /* Common */
 :root {
@@ -811,6 +812,7 @@ li:hover .item-pic figure img:nth-child(2) {
 .sub-visual {
   height: 32rem;
   height: 20.6667vw;
+  margin-top: 16rem;
   background: no-repeat 50% / cover;
 }
 .sub-title {
@@ -824,10 +826,12 @@ li:hover .item-pic figure img:nth-child(2) {
   font-weight: 700;
   font-size: 4.8rem;
   font-size: 3.2vw;
+  font-size: 2.8vw;
 }
 .sub-title p {
   font-size: 1.8rem;
   font-size: 1.1842vw;
+  font-size: 1vw;
 }
 @media (max-width: 1200px) {
   .sub-visual {
