--- a/css/explore.css
+++ b/css/explore.css
@@ -5,15 +5,26 @@
 }
 
 /* Section 003 */
+.history {
+  padding: 10rem 0;
+}
 .inner {
   background: rgba(255, 255, 0, 0.2);
 }
 /* Section 003 - visual */
 .history-visual {
+  padding: 0 10.6rem 10.6rem 10.6rem;
   display: flex;
+  justify-content: space-between;
 }
 .history-visual-title {
   display: flex;
+  align-items: flex-end;
+  border: 1px solid #000;
+  gap: 1rem;
+  width: 50%;
+}
+.history-title-left {
 }
 .history-title-left span {
   display: block;
@@ -30,4 +41,381 @@
   text-transform: uppercase;
   letter-spacing: -0.2rem;
   margin-top: 2rem;
+  border: 1px solid #000;
+}
+.history-title-right span {
+}
+.history-visual-img {
+  width: 50%;
+  border-radius: 1rem;
+  overflow: hidden;
+}
+.history-visual-img figure {
+  width: 100%;
+  height: 100%;
+}
+.history-visual-img figure img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* main */
+.history {
+  counter-reset: year-count;
+}
+
+.history-con {
+  width: 100%;
+  height: 35rem;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 5rem;
+  position: relative;
+  border-radius: 1rem;
+  overflow: hidden;
+}
+.history-con .history-img-wrap {
+  height: 100%;
+  width: 66.2278%;
+}
+.history-con .history-img-wrap figure {
+  width: 100%;
+  /* width: 100.6rem; */
+  height: 100%;
+  background: rgba(255, 255, 0, 0.2);
+  overflow: hidden;
+}
+.history-con .history-img-wrap figure img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  /* border: 1px solid red; */
+}
+.history-info {
+  counter-increment: year-count;
+  padding: 1rem 0;
+  width: 45.8rem;
+  height: 100%;
+}
+.history-info .history-info-year {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.history-info .history-info-year h5 {
+  font-size: 6rem;
+  font-weight: 700;
+  display: flex;
+  flex-direction: column;
+}
+.history-info .history-info-year h5::before {
+  content: '0' counter(year-count);
+  font-size: 3.6rem;
+  color: var(--black50p);
+  margin-bottom: -2.8rem;
+}
+.btn-arrow {
+  width: 9rem;
+  height: 9rem;
+  border-radius: 50%;
+  border: 2px solid #000;
+  background: url(../img/brandstory/ico-arrow-b-big.svg) no-repeat 50%;
+}
+
+.history-info p:first-of-type {
+  margin-top: 6.8rem;
+}
+.history-info p:last-of-type {
+  margin-top: 2rem;
+}
+
+/* 개별 이미지 */
+.img-1910 {
+  border-radius: 1rem;
+  overflow: hidden;
+}
+.img-1910 img {
+  object-position: 50% 0%;
+}
+.img-1962 {
+  width: 100% !important;
+  overflow: hidden;
+}
+.img-1962 figure {
+  width: 100% !important;
+}
+.img-1962::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.3);
+  z-index: 2;
+}
+.img-1962 img {
+  transform: scale(1.2);
+  object-position: 50% 40%;
+}
+.info-1962 {
+  position: absolute;
+  top: 50%;
+  right: 10.8rem;
+  transform: translateY(-50%);
+  z-index: 3;
+  padding: 6rem 0;
+}
+
+.info-1962 h5,
+.info-1962 p {
+  color: #fff;
+  text-align: right;
+}
+.info-1962 h5::before {
+  color: var(--white50p) !important;
+}
+.info-1962 .history-info-year {
+  flex-direction: row-reverse;
+}
+.info-1962 .history-info-year a {
+  display: none;
+}
+
+.history-con.con-1986 {
+  flex-direction: row-reverse;
+}
+.img-1986 {
+  width: 74.6544% !important;
+  width: 113.4rem;
+}
+.img-1986 figure {
+  width: 100% !important;
+  border-radius: 1rem;
+  height: 100%;
+}
+
+.info-1986 {
+  width: 32.6rem;
+  padding: 4.2rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.info-1986 a {
+  transform: rotate(-90deg);
+}
+
+.img-2000 {
+  border-radius: 1rem;
+  overflow: hidden;
+  border: 1px solid #000;
+}
+.img-2000 img {
+  object-position: 20% 50%;
+  /* transform: scale(0.5); */
+  object-fit: contain !important;
+  background: #fff;
+}
+.info-2000 {
+  padding: 6rem 0;
+}
+.info-2000 a {
+  transform: rotate(90deg);
+}
+
+.history-con.con-2008 {
+  position: relative;
+}
+.img-2008 {
+  width: 100% !important;
+}
+.img-2008 figure::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  background: rgba(0, 0, 0, 0.3);
+}
+.info-2008 {
+  position: absolute;
+  top: 50%;
+  right: 10.8rem;
+  padding: 7rem 0;
+  transform: translateY(-50%);
+  color: #fff;
+  text-align: right;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.info-2008 .history-info-year {
+  flex-direction: row-reverse;
+}
+.info-2008 .history-info-year h5::before {
+  color: var(--white50p);
+}
+.info-2008 .history-info-year a {
+  display: none;
+}
+
+.history-con.con-2015 {
+  flex-direction: row-reverse;
+}
+.img-2015 {
+  width: 74.6544% !important;
+}
+.img-2015 figure {
+  border-radius: 1rem;
+}
+.info-2015 {
+  width: 32.6rem;
+  padding: 4.2rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.info-2015 a {
+  transform: rotate(-90deg);
+}
+.img-2017 figure {
+  border-radius: 1rem;
+}
+.img-2017 figure img {
+  object-position: 70% 10%;
+
+  /* transform: scale(0.5); */
+  object-fit: cover !important;
+  /* background: linear-gradient(90deg, rgba(224, 225, 227, 1) 26%, rgba(243, 244, 246, 1) 100%); */
+  background: linear-gradient(90deg, rgba(244, 245, 247, 1) 27%, rgba(249, 249, 251, 1) 100%);
+}
+
+.info-2017 a {
+  transform: rotate(90deg);
+}
+
+.con-2020 {
+  position: relative;
+}
+.img-2020 {
+  width: 100% !important;
+}
+.img-2020 figure {
+  border-radius: 1rem;
+  width: 100%;
+}
+.img-2020 figure img {
+}
+
+.info-2020 {
+  position: absolute;
+  top: 50%;
+  right: 10.8rem;
+  padding: 7rem 0;
+  transform: translateY(-50%);
+  color: #fff;
+  text-align: right;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.info-2020 .history-info-year {
+  flex-direction: row-reverse;
+}
+.info-2020 .history-info-year h5::before {
+  color: var(--white50p);
+}
+.info-2020 .history-info-year a {
+  display: none;
+}
+.con-2024 {
+  flex-direction: row-reverse;
+}
+.img-2024 {
+  width: 50% !important;
+}
+.img-2024 figure {
+  border-radius: 1rem;
+}
+.img-2024 figure img {
+}
+.info-2024 {
+  padding-right: 10rem;
+  width: 50% !important;
+}
+.info-2024 .history-info-year h5::before {
+  content: 'NEW';
+  color: var(--point-color);
+}
+
+.info-2024 strong {
+  font-weight: 700;
+}
+
+.banner {
+  position: relative;
+}
+.banner-pic {
+  overflow: hidden;
+}
+.banner-pic figure {
+  height: 68rem;
+}
+.banner-pic figure img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+  object-position: 10% 80%;
+  /* border: 1px solid #000; */
+}
+
+.banner-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 1px solid #000;
+  color: var(--black);
+  width: 80%;
+  text-align: center;
+  z-index: 1000;
+  border: 1px solid #000;
+  mix-blend-mode: difference;
+  background: #000;
+}
+
+.banner-text p {
+  font-family: 'Montserrat';
+  font-size: 2.4rem;
+  font-weight: 300;
+  letter-spacing: 1.4rem;
+}
+
+.banner-text span {
+  display: block;
+  mix-blend-mode: difference;
+  width: 25rem;
+  height: 4rem;
+  margin: 0 auto;
+  margin-top: 1rem;
+
+  background: url(../img/logo.svg) no-repeat 50% / 80% auto;
+}
+.banner-text a {
+  mix-blend-mode: difference;
+  background: var(--black);
+  color: var(--white);
+  font-weight: 700;
+  margin-top: 4rem;
+}
+.banner-text a:hover {
+  color: var(--white);
+  background: var(--point-color);
 }
