--- a/css/common.css
+++ b/css/common.css
@@ -833,9 +833,10 @@ li:hover .item-pic figure img:nth-child(2) {
   font-size: 1.1842vw;
   font-size: 1vw;
 }
-@media (max-width: 1200px) {
+@media (max-width: 1024px) {
   .sub-visual {
     height: 20rem;
+    margin-top: 7rem;
   }
   .sub-title {
     padding-top: 9.6rem;
